force-app/main/default/objects/Accounting_Issue__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>The Date the Issue was Closed</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>