force-app/main/default/objects/Accounting_Issue__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>IF( ISNULL( Closed_Date__c ),
   NOW() -  CreatedDate,
    Closed_Date__c -  CreatedDate 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>