force-app/main/default/objects/Accounting_Issue__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Budgeting and Reporting</fullName>
            </value>
            <value>
                <fullName>Cash and POS</fullName>
            </value>
            <value>
                <fullName>ERP and Commissions</fullName>
            </value>
            <value>
                <fullName>Inventory and PO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>