force-app/main/default/objects/Accounting_Issue__c/validationRules/Restrict_Status_Picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Status_Picklist</fullName>
    <active>true</active>
    <errorConditionFormula>AND
   (
     NOT($Permission.Can_Manage_Accounting_Issues),
     NOT($Permission.Can_Modify_All_Accounting_Issues),
     NOT($Profile.Name = &apos;System Administrator&apos;),
     NOT(ISPICKVAL(Status__c, &apos;Submitted&apos;))
)</errorConditionFormula>
    <errorMessage>You can only set the set the Status field to &apos;Submitted&apos;.</errorMessage>
</ValidationRule>