force-app/main/default/objects/Accounting_Issue__c/listViews/Barrie.listView-meta.xml
<ListView>
    <fullName>Barrie</fullName>
    <columns>NAME</columns>
    <columns>Issue_Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>contains</operation>
        <value>Barrie</value>
    </filters>
    <label>Barrie</label>
</ListView>