force-app/main/default/objects/Accounting_Issue__c/listViews/Head_Office_Open.listView-meta.xml
<ListView>
    <fullName>Head_Office_Open</fullName>
    <columns>NAME</columns>
    <columns>Issue_Type__c</columns>
    <columns>Department__c</columns>
    <columns>Days_Open__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>contains</operation>
        <value>Head Office</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notContain</operation>
        <value>Complete</value>
    </filters>
    <label>Head Office - Open</label>
</ListView>