force-app/main/default/objects/Accounting_Issue__c/listViews/My_Issues.listView-meta.xml
<ListView>
    <fullName>My_Issues</fullName>
    <columns>NAME</columns>
    <columns>Days_Open__c</columns>
    <columns>Issue_Type__c</columns>
    <columns>Location__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Issues</label>
</ListView>